[package]
name = "z-base-32"
version = "0.1.4"
edition = "2018"
authors = ["Matus Ferech <matus.ferech@gmail.com>"]
license = "MIT"
repository = "https://github.com/matusf/z-base-32"
readme = "README.md"
description = "z-base-32: human-oriented base-32 encoding"
keywords = ["zbase32", "base32", "encode", "decode", "python"]
categories = ["encoding"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zbase32"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zbase32"
required-features = ["cli"]

[features]
python = ["dep:pyo3"]
cli = ["dep:clap", "dep:anyhow"]

[dependencies]
pyo3 = {version = "0.23.0", features = ["extension-module"], optional = true}
clap = {version = "4.5.4", features = ["derive"], optional = true}
anyhow = {version = "1.0.82", optional = true}

[dev-dependencies]
quickcheck = "1.0.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
features = ["cli"]
