[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python", "pyo3/extension-module"]

[tool.maturin.generate-ci.github]
trusted-publishing = true
publishing-environment = "release"
pytest = true

[project]
name = "z-base-32"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
